<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_insert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButton"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_name"
            android:autofillHints="@string/hint_name"/>

        <EditText
            android:id="@+id/editText_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButton"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_description"
            android:autofillHints="@string/hint_description"/>

        <RadioGroup
            android:id="@+id/radioGroup_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkedButton="@id/radioButton1">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorButton"
                android:text="@string/radiobutton_todo" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorButton"
                android:text="@string/radiobutton_in_progress" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorButton"
                android:text="@string/radiobutton_done" />

            <Spinner
                android:id="@+id/spinner_colors"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:visibility="visible" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/button_insert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_insert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>