<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit"
        android:title="@string/text_edit"
        android:icon="@drawable/ic_baseline_edit_24"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/text_delete"
        android:icon="@drawable/ic_baseline_delete_24"/>
</menu>